Improve docker; add tailwindcss; README overhaul

--- a/truffle-suite/Dockerfile
+++ b/truffle-suite/Dockerfile
@@ -1,21 +1,15 @@
 FROM node:lts-bullseye-slim
 
-WORKDIR /opt/node_app/app/client
-
 # Install truffle and dependencies
 RUN npm install -g truffle@latest
 
-# Install frontend dependencies
+# install dependencies first for better caching
+WORKDIR /opt/node_app/client
 COPY app/client/package.json .
 RUN npm install
 
-# Change entrypoint script in order to call npm install after volume is mounted
-RUN mv /usr/local/bin/docker-entrypoint.sh /usr/local/bin/default-docker-entrypoint.sh
-COPY truffle-suite/scripts/docker-entrypoint.sh /usr/local/bin/
-RUN chmod 775 /usr/local/bin/docker-entrypoint.sh
+# copy all files
+WORKDIR /opt/node_app/
+COPY app .
+
 EXPOSE 3000
-
-# if automatic start of frontend is desired, (un-)comment the following line
-# CMD [ "npm", "run", "dev" ]
-
-ENTRYPOINT [ "docker-entrypoint.sh" ]
