--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.9'
+version: '3.8'
 
 services:
   # start the ganache cli container
@@ -15,16 +15,20 @@ services:
     build:
       context: .
       dockerfile: truffle-suite/Dockerfile
-    working_dir: /opt/node_app/app/client
+    working_dir: /opt/node_app/client
+    environment:
+    # if developing next locally, comment out the entrypoint
+    # to increase the speed of hot reloading, commment out wepback in ./client/next.config.js
+    entrypoint: npm run dev
     ports:
       - 3000:3000
-      - 3001:3001
     volumes:
-      - app-dir:/opt/node_app/app
-      - client-dir:/opt/node_app/app/client:ro
+      - app-dir:/opt/node_app:rw
       # for next and caching:
-      - /opt/node_app/app/client/.next
-      - /opt/node_app/app/client/node_modules
+      - /opt/node_app/client/.next
+      - /opt/node_app/client/node_modules
+    depends_on:
+      - ganache-cli
     stdin_open: true # docker run -i
     tty: true # docker run -t
 volumes:
@@ -34,9 +38,3 @@ volumes:
       o: bind
       type: none
       device: app
-  client-dir:
-    driver: local
-    driver_opts:
-      o: bind
-      type: none
-      device: app/client
