--- a/app/client/package.json
+++ b/app/client/package.json
@@ -23,5 +23,9 @@
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4",
     "wagmi": "^0.12.10"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.7",
+    "prettier-plugin-tailwindcss": "^0.2.7"
   }
 }
