--- a/truffle/Dockerfile
+++ b/truffle/Dockerfile
@@ -4,12 +4,6 @@ FROM node:lts-bullseye-slim
 RUN npm install -g truffle@latest
 
 # install dependencies first for better caching
-WORKDIR /opt/node_app/client
-COPY app/client/package.json .
-RUN npm install
-
+WORKDIR /opt/truffle
 # copy all files
-WORKDIR /opt/node_app/
 COPY app .
-
-EXPOSE 3000
