--- a/app/client/package.json
+++ b/app/client/package.json
@@ -2,6 +2,10 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "name": "Philip Heller",
+    "email": "philip.heller@student.kit.edu"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
