--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,13 @@ bower_components/
 jspm_packages/
 composer.phar
 vendor/
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 
 # Build files and temporary files
 build/
