--- a/truffle/Dockerfile
+++ b/truffle/Dockerfile
@@ -5,5 +5,9 @@ RUN npm install -g truffle@latest
 
 # install dependencies first for better caching
 WORKDIR /opt/truffle
+
+COPY app/package*.json .
+RUN npm install
+
 # copy all files
 COPY app .
