--- a/app/client/package.json
+++ b/app/client/package.json
@@ -13,6 +13,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.17",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
@@ -23,7 +24,6 @@
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-jdenticon": "^1.0.1",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4",
     "wagmi": "^0.12.10"
