Add hook for data manip., add UI
- Add date-fns for dealing with dates
- Add interface for Product (for typesafety)
- Add hook for random products
- Migrate utils to hooks for reactive data manipulation
- Fixed localStorage hook
- Use new logic for `src/pages/index.tsx`, `src/pages/add/id.tsx`,
    `src/pages/dev/birth.tsx`

--- a/app/client/package.json
+++ b/app/client/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "18.0.11",
     "@wagmi/chains": "^0.2.18",
     "autoprefixer": "10.4.14",
+    "date-fns": "^2.29.3",
     "ethers": "^5.7.2",
     "next": "13.3.0",
     "postcss": "8.4.21",
